test login and logout
