# packages/backend/src/auth/auth.controller.ts
@@ -1,12 +1,9 @@
-import { Controller, Post, Body, Get, UseGuards } from '@nestjs/common'
+import { Controller, Post, Body, Get } from '@nestjs/common'
 import { AuthService } from './auth.service'
 import { RegisterUserDto as RegisterUserDto } from 'src/auth/dto/register-user.dto'
 import { LoginUserDto } from 'src/auth/dto/login-user.dto'
-import { AuthGuard } from '@nestjs/passport'
 import { GetUser } from 'src/common/decorators/get-user.decorator'
-import { User, UserRole } from 'generated/prisma/client'
-import { UserRoleGuard } from 'src/auth/guards/user-role/user-role.guard'
-import { Roles } from 'src/auth/decorators/roles.decorator'
+import { User } from 'generated/prisma/client'
 import { Auth } from 'src/auth/decorators/auth.decorator'
 import { AuthResponse } from 'src/auth/entities/auth-response.entity'
 import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger'
@@ -38,37 +35,10 @@ export class AuthController {
     return this.authService.login(loginUserDto)
   }
 
-  @Get('private')
-  @UseGuards(AuthGuard(), UserRoleGuard)
-  testingPrivateRoute(
-    @GetUser('id') id: number,
-    @GetUser('email') email: string,
-    @GetUser('role') role: UserRole
-  ) {
-    return {
-      id,
-      email,
-      role,
-    }
-  }
-
-  @Get('private2')
-  @UseGuards(AuthGuard(), UserRoleGuard)
-  @Roles(UserRole.RESIDENT)
-  testingPrivateRoute2(
-    @GetUser('id') id: number,
-    @GetUser('firstName') firstName: string,
-    @GetUser('lastName') lastName: string,
-    @GetUser('email') email: string,
-    @GetUser('role') role: UserRole
-  ) {
-    return {
-      id,
-      firstName,
-      lastName,
-      email,
-      role,
-    }
+  @Get('check-auth-status')
+  @Auth()
+  checkAuthStatus(@GetUser() user: User) {
+    return this.authService.checkAuthStatus(user)
   }
 
   @Get('me')
